# memory-for-agents-llm

./: .dockerignore  .gitignore  AGENTS.md  Arquitetura de Memória para Agents.md  CLAUDE.md  CODEX.md  DOCUMENTACAO.md  QUICKSTART.md  README.md  docker-compose.override.yml  docker-compose.yml  primeira-pesquisa-ideia.md
.agents/skills/: README.md
.claude/: CLAUDE.md
.claude/agents/: coordinator.md  implementer.md  memory-curator.md
.claude/rules/: 00-memory-governance.md  10-cross-repo-context.md  20-sdd-lifecycle.md
.claude/skills/: README.md
.claude/templates/: README.md  architect-session.md  context-researcher-session.md  memory-curator-session.md  reviewer-session.md  spec-analyst-session.md
.codex/: README.md  config.toml  hooks.json
.codex/agents/: cross-repo-coordinator.toml  memory-architect.toml  memory-context-researcher.toml  memory-coordinator.toml  memory-curator.toml  memory-implementer.toml  memory-reviewer.toml  memory-spec-analyst.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: spec-memory-architect.agent.md  spec-memory-curator.agent.md  spec-memory-implementer.agent.md  spec-memory-reviewer.agent.md  spec-memory-spec-analyst.agent.md
.github/hooks/: spec-memory.json
.github/instructions/: spec-memory-platform.instructions.md
.github/prompts/: spec-memory-context-pack.prompt.md
.github/workflows/: auto-open-pr-on-feature-branch.yml  publish-local-stack-images.yml  spec-memory-copilot-events.yml
backend/central-memory-api/: Cargo.toml  Dockerfile  README.md
backend/central-memory-api/src/: main.rs
backend/central-memory-lambda/: Cargo.toml
backend/central-memory-lambda/src/: main.rs
hooks/: README.md  central_memory_backend_client.py  codex_hook_runner.py  codex_stop_hook.py  memory_event_poster.py  memory_hooks.py
knowledge/: README.md
knowledge/_proposals/: README.md
knowledge/adr/: README.md  bidirectional-structured-memory-mcp.md  central-memory-backend.md  (+7 more)
local_stack/: README.md  __init__.py  config.py  markdown.py  storage.py  worker.py
local_stack/api/: Cargo.toml  Dockerfile
local_stack/api/src/: main.rs
local_stack/mcp-server/: Cargo.toml  Dockerfile
local_stack/mcp-server/src/: main.rs
scripts/: build_central_memory_backend.py  copilot_event_capture.py  copilot_hook_capture.py  install_claude_assets.py  install_codex_assets.py  install_copilot_assets.py  install_public_release.py  package_release.py  publish_local_stack_images.py  release_central_memory_backend.py  smoke_test_central_memory_backend.py  smoke_test_local_memory_stack.py  stack_urls.py
(+126 files in other folders)
