[package]
name = "central-memory-api"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
flate2 = "1"
hex = "0.4"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
