[package]
name = "central-memory-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
bytes = "1"
flate2 = "1"
hex = "0.4"
http = "1"
lambda_http = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
