[package]
name = "local-memory-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "json"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
