[package]
name = "memory-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rmcp = { version = "0.16.0", features = ["server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
